
     Version 5.3.0(March 1st, 2025)
         [Windows]
        - File names in batch and playlist downloader show up correctly when they
           contain some non ascii characters.
         [ALL]
        - Add Greek translations.
        - Add a GUI way to set yt-dlp and gallery-dl option of "--cookies-from-browser".

     Version 5.3.1(Match 11th, 2025)
     [ALL]
        - Fix a crash when using gallery-dl
        - Add a menu in configure tab to install a short list of supported extensions.
        - Rearrage configure->general tab to make it friendly to translations.
        - Add a platform default theme and a light theme options.
        - Make it possible in the UI to choose between setting a browser name or setting a path to a cookie file.

     Version 5.3.2(Match 24th, 2025)
     [MAC]
        - Make gallery-dl work out of the box.
     [ALL]
        - BUG fix: Download progress on the title bar shows again when downloading from batch downloader tab.

     Version 5.3.3(May 21st, 2025)
     [ALL]
        - Playlist downloader tab now says why populating playlist was stopped when using "--break-on-existing".
        - Fix a bug on batch downloader tab that may lead to a crash when fetching metadata.

     Version 5.4.0(May 29th, 2025)
     [ALL]
        - Fix a bug introduced in 5.3.3 that causes entries in batch downloader tab to start downloading when added because of using a wrong config only option.
        - Add an "Extension" sub tab in configure tab to expose more config only options in "General" sub tab.

     Version 5.4.1(UNRELEASED)
     [WINDOWS]
       - Fix a bug caused by yt-dlp executable name change for 32 bit windows 7.
     [ALL]
       - Add Bulgarian translations.
       - It is now possible to start downloading while the playlist tab is getting filled with entries.
       - It is now possible to do simultaneous downloading from all three tabs that can do downloading.