@@ -372,9 +372,13 @@ Version 1.2.0(April 1st, 2021)
         - Add an "Extension" sub tab in configure tab to expose more config only options in "General" sub tab.
 
      Version 5.4.1(UNRELEASED)
+     [Flatpak]
+       - Make it possible to specially call VLC to stream media(needs org.freedesktop.Flatpak permission).
      [WINDOWS]
        - Fix a bug caused by yt-dlp executable name change for 32 bit windows 7.
      [ALL]
        - Add Bulgarian translations.
        - It is now possible to start downloading while the playlist tab is getting filled with entries.
        - It is now possible to do simultaneous downloading from all three tabs that can do downloading.
+       - It is now possible to send multiple urls to VLC for streaming. This is useful for example
+         when you want to stream a media that is made up of a video only stream and an audio only stream.
